# archiveTool

./: .clang-format  .gitignore  CMakeLists.txt  README.md  archiver.hpp  benchmarkFsGen.sh  benchmarkGen.sh  compressionRatio.sh  endianHelpers.hpp  fnv1a.hpp  main.cpp  miniJson.hpp  zstdCtxWrapper.hpp
